force-app/main/default/objects/Doctor__c/fields/Available_Slots_Config__c.field-meta.xml
<CustomField>
    <fullName>Available_Slots_Config__c</fullName>
    <label>Available Slots Config</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>08:00 - 08:30</fullName>
            </value>
            <value>
                <fullName>08:30 - 09:00</fullName>
            </value>
            <value>
                <fullName>09:00 - 09:30</fullName>
            </value>
            <value>
                <fullName>09:30 - 10:00</fullName>
            </value>
            <value>
                <fullName>10:00 - 10:30</fullName>
            </value>
            <value>
                <fullName>10:30 - 11:00</fullName>
            </value>
            <value>
                <fullName>11:00 - 11:30</fullName>
            </value>
            <value>
                <fullName>11:30 - 12:00</fullName>
            </value>
            <value>
                <fullName>12:00 - 12:30</fullName>
            </value>
            <value>
                <fullName>12:30 - 13:00</fullName>
            </value>
            <value>
                <fullName>13:00 - 13:30</fullName>
            </value>
            <value>
                <fullName>13:30 - 14:00</fullName>
            </value>
            <value>
                <fullName>14:00 - 14:30</fullName>
            </value>
            <value>
                <fullName>14:30 - 15:00</fullName>
            </value>
            <value>
                <fullName>15:00 - 15:30</fullName>
            </value>
            <value>
                <fullName>15:30 - 16:00</fullName>
            </value>
            <value>
                <fullName>16:00 - 16:30</fullName>
            </value>
            <value>
                <fullName>16:30 - 17:00</fullName>
            </value>
            <value>
                <fullName>17:00 - 17:30</fullName>
            </value>
            <value>
                <fullName>17:30 - 18:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>