force-app/main/default/objects/Doctor__c/fields/Consultation_Duration__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Duration__c</fullName>
    <label>Consultation Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>