force-app/main/default/objects/Doctor__c/fields/Max_Daily_Appointments__c.field-meta.xml
<CustomField>
    <fullName>Max_Daily_Appointments__c</fullName>
    <label>Max Daily Appointments</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>