force-app/main/default/objects/Doctor__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>