force-app/main/default/objects/Doctor__c/fields/Specialization_Type__c.field-meta.xml
<CustomField>
    <fullName>Specialization_Type__c</fullName>
    <label>Specialization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Physician</fullName>
            </value>
            <value>
                <fullName>Cardiologist</fullName>
            </value>
            <value>
                <fullName>Neurologist</fullName>
            </value>
            <value>
                <fullName>Oncologist</fullName>
            </value>
            <value>
                <fullName>Orthopedic Surgeon</fullName>
            </value>
            <value>
                <fullName>Pediatrician</fullName>
            </value>
            <value>
                <fullName>Gynecologist</fullName>
            </value>
            <value>
                <fullName>Emergency Physician</fullName>
            </value>
            <value>
                <fullName>Radiologist</fullName>
            </value>
            <value>
                <fullName>Pathologist</fullName>
            </value>
            <value>
                <fullName>Anesthesiologist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>