force-app/main/default/objects/Doctor__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Record</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipLabel>Doctor Profiles</relationshipLabel>
    <relationshipName>Doctor_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>