force-app/main/default/objects/Doctor__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Subordinates</relationshipLabel>
    <relationshipName>Subordinates</relationshipName>
    <type>Lookup</type>
</CustomField>