force-app/main/default/objects/Doctor__c/fields/Wednesday__c.field-meta.xml
<CustomField>
    <fullName>Wednesday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wednesday</label>
    <type>Checkbox</type>
</CustomField>